Changes to be committed: 	modified:   analytics/tweet.py 	modified:   database/ionstreamer.sql 	modified:   static/css/app.css 	new file:   static/js/angular-animate.min.js 	new file:   static/js/angular-sanitize.min.js 	modified:   static/js/app.js 	modified:   templates/analyze.html 	modified:   templates/base.html 	modified:   templates/streamings.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,8 @@
   <script src="{{ url_for('static', filename='js/foundation.min.js') }}"></script>
 
   <script src="{{ url_for('static', filename='js/angular.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/angular-sanitize.min.js') }}"></script>
+  <!-- <script src="{{ url_for('static', filename='js/angular-animate.min.js') }}"></script> -->
   <script src="{{ url_for('static', filename='js/app.js') }}"></script>
 
   <script>
