--- a/templates/analyze.html
+++ b/templates/analyze.html
@@ -6,53 +6,67 @@
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 <script src="{{ url_for('static', filename='js/chart.js') }}"></script>
 <script type="text/javascript">
-google.load('visualization', '1.0', {packages: ['corechart']});
+google.load('visualization', '1.0');
 google.setOnLoadCallback(drawCurves);
 
 function drawFreq() {
-  var data = new google.visualization.DataTable();
-  data.addColumn('datetime', 'Time');
-  data.addColumn('number', 'All Tweets');
-  data.addColumn('number', 'Positive Tweets');
-  data.addColumn('number', 'Negative Tweets');
-
-  var chart = new google.visualization.LineChart(document.getElementById('freq'));
-  var chart2 = new google.visualization.PieChart(document.getElementById('sentiment'));
   $.get('/api/analyze/freq/{{encoded_keyword}}', function(r){
-    tabel = r.map(function(x){x[0] = new Date(x[0]); return x;});
-    data.addRows(tabel);
-    chart.draw(data, options_freq);
+    var wrapper = new google.visualization.ChartWrapper({
+      chartType: 'LineChart',
+      dataTable: [['TIme', 'All Tweets', 'Positive Tweets', 'Negative Tweets']].concat(r.map(function(x){x[0] = new Date(x[0]); return x;})),
+      options: options_freq,
+      containerId: 'freq'
+    });
+    wrapper.draw();
 
     var positive = r.reduce(function(acc, curr){return acc + curr[2];}, 0);
     var negative = r.reduce(function(acc, curr){return acc + curr[3];}, 0);
-    data = google.visualization.arrayToDataTable([
-      ['Sentiment', 'Number of Occurence'],
-      ['Positive Tweets', positive],
-      ['Negative Tweets', negative],
-    ]);
-    chart2.draw(data, options_sentiment);
+    var wrapper = new google.visualization.ChartWrapper({
+      chartType: 'PieChart',
+      dataTable: [['Label', 'Number of Tweets'], ['Positive Tweets', positive], ['Negative Tweets', negative]],
+      options: options_sentiment,
+      containerId: 'sentiment'
+    });
+    wrapper.draw();
   }, 'JSON');
 }
 
+
 function drawTopMention() {
-  var data = new google.visualization.DataTable();
-  data.addColumn('string', 'Username');
-  data.addColumn('number', 'Number of Mentions');
-  var chart = new google.visualization.BarChart(document.getElementById('topmention'));
   $.get('/api/analyze/topmention/{{encoded_keyword}}', function(r){
-    data.addRows(r);
-    chart.draw(data, options_topmention);
+    var wrapper = new google.visualization.ChartWrapper({
+      chartType: 'BarChart',
+      dataTable: [['Username', 'Number of Mention']].concat(r),
+      options: options_topmention,
+      containerId: 'topmention'
+    });
+    wrapper.draw();
+
+    function showTweets() {
+      w = wrapper;
+      console.log("aye");
+    }
+
+    google.visualization.events.addListener(wrapper, 'select', showTweets);
   }, 'JSON');
 }
 
 function drawTopPosting() {
-  var data = new google.visualization.DataTable();
-  data.addColumn('string', 'Username');
-  data.addColumn('number', 'Number of Posts');
-  var chart = new google.visualization.BarChart(document.getElementById('topposting'));
   $.get('/api/analyze/topposting/{{encoded_keyword}}', function(r){
-    data.addRows(r);
-    chart.draw(data, options_topposting);
+    var wrapper = new google.visualization.ChartWrapper({
+      chartType: 'BarChart',
+      dataTable: [['Username', 'Number of Post']].concat(r),
+      options: options_topposting,
+      containerId: 'topposting'
+    });
+    wrapper.draw();
+  }, 'JSON');
+}
+
+function getTopRetweets() {
+  $.get('/api/analyze/topretweet/'+ $('#keyword').html(), function(r){
+    angular.element('#analyzeController').scope().showTopRetweets(r);
+    angular.element('#analyzeController').scope().$apply();
   }, 'JSON');
 }
 
@@ -60,11 +74,12 @@ function drawCurves() {
   drawFreq();
   drawTopMention();
   drawTopPosting();
+  getTopRetweets();
 }
 </script>
 
 
-<div ng-controller="analyzeController">
+<div id="analyzeController" ng-controller="analyzeController">
 
   <nav class="top-bar" data-topbar>
     <span class="name text-center">
@@ -98,7 +113,7 @@ function drawCurves() {
 
   <div class="row">
     <div class="columns small-12 large-6 topretweet">
-      <div class="alert-box info radius" ng-show="showtopretweet">Top Retweet</div>
+      <div class="alert-box info radius text-center">Top Retweet <i ng-hide="hasretweets" class="fa fa-lg fa-cog fa-spin"></i></div>
       <!-- TOP TWEET -->
       <div class="row" ng-repeat="tweet in tweets">    
         <div class="columns small-2 th">
@@ -106,13 +121,12 @@ function drawCurves() {
         </div>
         <div class="columns small-10">
           <div class="user">
-            <span class="name">{{ tweet.retweeted_status.user.name }}</span>
-            <a target="_blank" ng-href="http://twitter.com/{{ tweet.retweeted_status.user.screen_name }}" class="username">@{{ tweet.retweeted_status.user.screen_name }}</a>
-            -
-            <a target="_blank" ng-href="http://twitter.com/{{ tweet.retweeted_status.user.screen_name }}/status/{{ tweet.retweeted_status.id_str }}" class="count label secondary radius">{{ tweet.retweeted_status.retweet_count }} retweets</a>
+            <span class="name" ng-bind-html="tweet.retweeted_status.user.name"></span>
+            <a target="_blank" ng-href="http://twitter.com/{{ tweet.retweeted_status.user.screen_name }}" class="username" ng-bind-html="'@'+tweet.retweeted_status.user.screen_name"></a>
+            <a target="_blank" ng-href="http://twitter.com/{{ tweet.retweeted_status.user.screen_name }}/status/{{ tweet.retweeted_status.id_str }}" class="count label secondary radius" ng-bind-html="tweet.retweeted_status.retweet_count+' retweets'"></a>
           </div>
           <div class="text">
-            <p>{{ tweet.text }}</p>
+            <p ng-bind-html="tweet.text"></p>
           </div>
         </div>
       </div>
@@ -120,21 +134,20 @@ function drawCurves() {
     </div>
 
     <div class="columns small-12 large-6 topretweet">
-      <div class="alert-box info radius" ng-show="showtweets">Tweets</div>
+      <div class="alert-box info radius" ng-show="hastweets">Tweets</div>
       <!-- TOP TWEET -->
-      <div class="row" ng-repeat="tweet in tweets">
+      <div class="row" ng-repeat="tweet in []">
         <div class="columns small-2 th">
           <img ng-src="{{ tweet.retweeted_status.user.profile_image_url }}">
         </div>
         <div class="columns small-10">
           <div class="user">
-            <span class="name">{{ tweet.retweeted_status.user.name }}</span>
-            <a target="_blank" ng-href="http://twitter.com/{{ tweet.retweeted_status.user.screen_name }}" class="username">@{{ tweet.retweeted_status.user.screen_name }}</a>
-            -
-            <span class="count label secondary radius">{{ tweet.retweeted_status.retweet_count }} retweets</span>
+            <span class="name" ng-bind-html="tweet.retweeted_status.user.name"></span>
+            <a target="_blank" ng-href="http://twitter.com/{{ tweet.retweeted_status.user.screen_name }}" class="username" ng-bind-html="'@'+tweet.retweeted_status.user.screen_name"></a>
+            <a target="_blank" ng-href="http://twitter.com/{{ tweet.retweeted_status.user.screen_name }}/status/{{ tweet.retweeted_status.id_str }}" class="count label secondary radius" ng-bind-html="tweet.retweeted_status.retweet_count+' retweets'"></a>
           </div>
           <div class="text">
-            <p>{{ tweet.text | html }}</p>
+            <p ng-bind-html="tweet.text"></p>
           </div>
         </div>
       </div>
