--- a/templates/streamings.html
+++ b/templates/streamings.html
@@ -25,15 +25,15 @@
   <div class="row">
     <div class="small-block-grid-1 large-block-grid-3">
 
-      <li ng-style="info.status=='inactive' && {'opacity': 0.6}" ng-repeat="info in summary">
+      <li ng-style="info.status=='inactive' && {'opacity': 0.6}" ng-repeat="info in summary | filter:keyword" class="slide">
         <ul class="pricing-table">
           {% raw %}
           <a href="/analyze/{{ info.keyword | encodeURIComponent }}">
-            <li class="title keyword">{{info.keyword}}</li>
+            <li class="title keyword" ng-bind-html="info.keyword"></li>
           </a>
-          <li class="price"><i ng-show="info.processing" class="fa fa-spinner fa-pulse fa-spin"></i><span ng-hide="info.processing">{{info.count}}</span></li>
+          <li class="price"><i ng-show="info.processing" class="fa fa-spinner fa-pulse fa-spin"></i><span ng-hide="info.processing" ng-bind-html="info.count"></span></li>
           <!-- <li class="description"></li> -->
-          <li class="bullet-item" ng-repeat="tweet in info.tweets">{{tweet}}</li>
+          <li class="bullet-item" ng-repeat="tweet in info.tweets" ng-bind-html="tweet"></li>
           <li class="cta-button">
             <button ng-disabled="info.is_streaming || info.processing" ng-click="stream(info, 'active')" ng-hide="info.status=='active'" class="button radius secondary tiny"><i class="fa fa-play"></i></button>
             <button ng-disabled="info.is_streaming || info.processing" ng-click="stream(info, 'inactive')" ng-hide="info.status=='inactive'"class="button radius secondary tiny"><i class="fa fa-pause"></i></button>
