--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/foundation.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/fa/css/font-awesome.min.css') }}">
 
-  <!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/animate.css') }}"> -->
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/animate.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/app.css') }}">
 
   <script src="{{ url_for('static', filename='js/vendor/modernizr.js') }}"></script>
