--- a/templates/analyze.html
+++ b/templates/analyze.html
@@ -145,7 +145,7 @@ function drawCurves() {
           <div class="user">
             <span class="name" ng-bind-html="tweet.retweeted_status.user.name"></span>
             <a target="_blank" ng-href="http://twitter.com/{{ tweet.retweeted_status.user.screen_name }}" class="username" ng-bind-html="'@'+tweet.retweeted_status.user.screen_name"></a>
-            <a target="_blank" ng-href="http://twitter.com/{{ tweet.retweeted_status.user.screen_name }}/status/{{ tweet.retweeted_status.id_str }}" class="count label secondary radius" ng-bind-html="tweet.retweeted_status.retweet_count+' retweets'"></a>
+            <a target="_blank" ng-href="http://twitter.com/{{ tweet.retweeted_status.user.screen_name }}/status/{{ tweet.id_str }}" class="count label secondary radius" ng-bind-html="tweet.retweeted_status.retweet_count+' retweets'"></a>
           </div>
           <div class="text">
             <p ng-bind-html="tweet.retweeted_status.text"></p>
