--- a/templates/analyze.html
+++ b/templates/analyze.html
@@ -139,16 +139,16 @@ function drawCurves() {
       <!-- TOP TWEET -->
       <div class="row" ng-repeat="tweet in retweets">
         <div class="columns small-2 th">
-          <img ng-src="{{ tweet.retweeted_status.user.profile_image_url }}">
+          <img ng-src="{{ tweet.user.profile_image_url }}">
         </div>
         <div class="columns small-10">
           <div class="user">
-            <span class="name" ng-bind-html="tweet.retweeted_status.user.name"></span>
-            <a target="_blank" ng-href="http://twitter.com/{{ tweet.retweeted_status.user.screen_name }}" class="username" ng-bind-html="'@'+tweet.retweeted_status.user.screen_name"></a>
-            <a target="_blank" ng-href="http://twitter.com/{{ tweet.retweeted_status.user.screen_name }}/status/{{ tweet.id_str }}" class="count label secondary radius" ng-bind-html="tweet.retweeted_status.retweet_count+' retweets'"></a>
+            <span class="name" ng-bind-html="tweet.user.name"></span>
+            <a target="_blank" ng-href="http://twitter.com/{{ tweet.user.screen_name }}" class="username" ng-bind-html="'@'+tweet.user.screen_name"></a>
+            <a target="_blank" ng-href="http://twitter.com/{{ tweet.user.screen_name }}/status/{{ tweet.id_str }}" class="count label secondary radius" ng-bind-html="tweet.retweet_count+' retweets'"></a>
           </div>
           <div class="text">
-            <p ng-bind-html="tweet.retweeted_status.text"></p>
+            <p ng-bind-html="tweet.text"></p>
           </div>
         </div>
       </div>
