--- a/templates/analyze.html
+++ b/templates/analyze.html
@@ -22,9 +22,11 @@ function drawFreq() {
     function showTweetsAt() {
       s = wrapper.getChart().getSelection()[0];
       if (s !== undefined && s.row !== null && s.column !== null) {
-        t = new Date(wrapper.getDataTable().getValue(s.row, 0));
-        t.setHours(t.getHours());
-        angular.element('#analyzeController').scope().fetchTweetsAt($('#keyword').text(), t.toISOString());
+        t1 = new Date(wrapper.getDataTable().getValue(s.row, 0));
+        itv = wrapper.getDataTable().getValue(1, 0) - wrapper.getDataTable().getValue(0, 0);
+        t2 = new Date(t1.getTime() + itv);
+        t1.setHours(t.getHours());
+        angular.element('#analyzeController').scope().fetchTweetsAt($('#keyword').text(), t1.toISOString(), t2.toISOString());
         angular.element('#analyzeController').scope().$apply();
         $('#tweets').foundation('reveal', 'open');
       }
