Changes to be committed: 	modified:   analytics/tweet.py 	modified:   database/dbresult.py 	modified:   router.py 	modified:   static/css/app.css 	modified:   static/js/app.js 	new file:   static/js/ng-infinite-scroll.min.js 	modified:   streamer/tweet_streamer.py 	modified:   templates/analyze.html 	modified:   templates/base.html 	new file:   templates/classified.html 	modified:   templates/learn.html 	modified:   templates/streamings.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,17 +12,21 @@
 
   <link rel="stylesheet" href="{{ url_for('static', filename='css/animate.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/app.css') }}">
-
+  <!-- 
   <script src="{{ url_for('static', filename='js/vendor/modernizr.js') }}"></script>
+  -->
   <script src="{{ url_for('static', filename='js/vendor/jquery.js') }}"></script>
 </head>
 <body>
   {% block content %}{% endblock %}
+  <!-- 
   <script src="{{ url_for('static', filename='js/vendor/fastclick.js') }}"></script>
+   -->
   <script src="{{ url_for('static', filename='js/foundation.min.js') }}"></script>
 
   <script src="{{ url_for('static', filename='js/angular.min.js') }}"></script>
   <script src="{{ url_for('static', filename='js/angular-sanitize.min.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/ng-infinite-scroll.min.js') }}"></script>
   <script src="{{ url_for('static', filename='js/app.js') }}"></script>
 
   <script>
