--- a/templates/analyze.html
+++ b/templates/analyze.html
@@ -10,7 +10,7 @@ google.load('visualization', '1.0');
 google.setOnLoadCallback(drawCurves);
 
 function drawFreq() {
-  $.get('/api/analyze/freq/{{encoded_keyword}}', function(r){
+  $.get('/api/analyze/freq/'+encodeURIComponent($('#keyword').text()), function(r){
     var wrapper = new google.visualization.ChartWrapper({
       chartType: 'LineChart',
       dataTable: [['TIme', 'All Tweets', 'Positive Tweets', 'Negative Tweets']].concat(r.map(function(x){x[0] = new Date(x[0]); x[0].setHours(x[0].getHours()); return x;})),
@@ -47,7 +47,7 @@ function drawFreq() {
 
 
 function drawTopMention() {
-  $.get('/api/analyze/topmentions/{{encoded_keyword}}', function(r){
+  $.get('/api/analyze/topmentions/'+encodeURIComponent($('#keyword').text()), function(r){
     var wrapper = new google.visualization.ChartWrapper({
       chartType: 'BarChart',
       dataTable: [['Username', 'Number of Mention']].concat(r),
@@ -70,7 +70,7 @@ function drawTopMention() {
 }
 
 function drawTopPosting() {
-  $.get('/api/analyze/toppostings/{{encoded_keyword}}', function(r){
+  $.get('/api/analyze/toppostings/'+encodeURIComponent($('#keyword').text()), function(r){
     var wrapper = new google.visualization.ChartWrapper({
       chartType: 'BarChart',
       dataTable: [['Username', 'Number of Post']].concat(r),
@@ -111,19 +111,19 @@ function drawCurves() {
   <hr>
 
   <div class="row">
-    <div class="small-12 large-9 columns">
+    <div class="small-12 medium-9 columns">
       <div id="freq" class="text-center"><h1><i class="fa fa-lg fa-line-chart fa-spin"></i></h1></div>
     </div>
-    <div class="small-12 large-3 columns">
+    <div class="small-12 medium-3 columns">
       <div id="sentiment" class="text-center"><h1><i class="fa fa-lg fa-pie-chart fa-spin"></i></h1></div>
     </div>
   </div>
 
   <div class="row">
-    <div class="small-12 large-6 columns">
+    <div class="small-12 medium-6 columns">
       <div id="topmention" class="text-center"><h1><i class="fa fa-lg fa-bar-chart fa-spin"></i></h1></div>
     </div>
-    <div class="small-12 large-6 columns">
+    <div class="small-12 medium-6 columns">
       <div id="topposting" class="text-center"><h1><i class="fa fa-lg fa-bar-chart fa-spin"></i></h1></div>
     </div>
   </div>
@@ -133,17 +133,17 @@ function drawCurves() {
   <!-- <hr> -->
 
   <div class="row">
-    <div class="columns small-12 large-6 topretweet">
+    <div class="columns small-12 medium-6">
       <div class="alert-box info radius text-center">
         <button ng-hide="loadtopretweets" class="label secondary radius" ng-click="showTopRetweets()">Show Top Retweets</button>
         <span ng-show="loadtopretweets">Top Retweet <i ng-hide="hasretweets" class="fa fa-lg fa-cog fa-spin"></i></span>
       </div>
       <!-- TOP TWEET -->
       <div class="row" ng-repeat="tweet in retweets">
-        <div class="columns small-2 th">
+        <div class="columns hide-for-small-only medium-2 th">
           <img ng-src="{{ tweet.user.profile_image_url }}">
         </div>
-        <div class="columns small-10">
+        <div class="columns small-12 medium-10">
           <div class="user">
             <span class="name" ng-bind-html="tweet.user.name"></span>
             <a target="_blank" ng-href="http://twitter.com/{{ tweet.user.screen_name }}" class="username" ng-bind-html="'@'+tweet.user.screen_name"></a>
@@ -157,17 +157,17 @@ function drawCurves() {
       <!-- END OF TOP TWEET -->
     </div>
 
-    <div class="columns small-12 large-6 topretweet">
+    <div class="columns small-12 medium-6">
       <div class="alert-box info radius text-center">
         <button ng-hide="loadrandomtweets" class="label secondary radius" ng-click="showRandomTweets()">Show Random Retweets</button>
         <span ng-show="loadrandomtweets">Random Tweets <i ng-hide="hasrandomtweets" class="fa fa-lg fa-cog fa-spin"></i></span>
       </div>
       <!-- JUST SOME RANDOM TWEETS -->
       <div class="row" ng-repeat="tweet in randomtweets">
-        <div class="columns small-2 th">
+        <div class="columns hide-for-small-only medium-2 th">
           <img ng-src="{{ tweet.user.profile_image_url }}">
         </div>
-        <div class="columns small-10">
+        <div class="columns small-12 medium-10">
           <div class="user">
             <span class="name" ng-bind-html="tweet.user.name"></span>
             <a target="_blank" ng-href="http://twitter.com/{{ tweet.user.screen_name }}" class="username" ng-bind-html="'@'+tweet.user.screen_name"></a>
@@ -182,9 +182,9 @@ function drawCurves() {
     </div>
   </div>
 
-<!-- <div class="columns small-12 large-6 topretweet" id="tweets"> -->
+<!-- <div class="columns small-12 medium-6" id="tweets"> -->
 <div id="tweets" class="reveal-modal row" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
-  <div class="column small-11 large-11">
+  <div class="column small-11 medium-11">
     <div class="row">
       <div class="alert-box info radius">
         <span>Tweets</span>
@@ -196,10 +196,10 @@ function drawCurves() {
     </div>
     <!-- TWEETS -->
     <div class="row" ng-repeat="tweet in tweets">
-      <div class="columns small-3 large-1">
+      <div class="columns hide-for-small-only medium-1">
         <div class="th"> <img ng-src="{{ tweet.user.profile_image_url }}"> </div>
       </div>
-      <div class="columns small-9 large-11">
+      <div class="columns small-12 medium-11">
         <div class="user row">
           <span class="name" ng-bind-html="tweet.user.name"></span>
           <a target="_blank" ng-href="http://twitter.com/{{ tweet.user.screen_name }}" class="username" ng-bind-html="'@'+tweet.user.screen_name"></a>
