--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <!-- If you delete this meta tag World War Z will become a reality -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{% block title %}{% endblock %}</title>
+  <title>Langgar Social Media Analyzer</title>
 
   <link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css') }}">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/foundation.css') }}">
@@ -18,10 +18,66 @@
   <script src="{{ url_for('static', filename='js/vendor/jquery.js') }}"></script>
 </head>
 <body>
+
+  <!-- NAVBAR -->
+  <nav class="top-bar" data-topbar role="navigation" ng-controller="navbarController">
+    <ul class="title-area">
+      <li class="name">
+        <h1 class="title"><i class="fa fa-twitter fa-lg"></i> {% block titlenav %}{% endblock %}</h1>
+      </li>
+       <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+      <li class="toggle-topbar menu-icon"><a href="#"><span></span></a></li>
+    </ul>
+
+    {% raw %}
+    <section class="top-bar-section">
+      <!-- Right Nav Section -->
+      <ul class="right">
+        <li class=""><a href="/">Home</a></li>
+        <li class="has-dropdown">
+          <a href="">Analyze</a>
+          <ul class="dropdown">
+            <li ng-repeat="info in summary">
+              <a ng-href="/analyze/{{info.keyword | encodeURIComponent}}" ng-bind-html="info.keyword+' ('+info.count+')'"></a>
+            </li>
+          </ul>
+        </li>
+        <li class="has-dropdown">
+          <a href="">Train</a>
+          <ul class="dropdown">
+            <li><a href="/learn">Random</a></li>
+            <li><a href="/learn/classified">Classified</a></li>
+          </ul>
+        </li>
+      </ul>
+
+      <!-- Left Nav Section -->
+      <!-- <ul class="left">
+        <li><a href="#">Left Nav Button</a></li>
+      </ul> -->
+    </section>
+    {% endraw %}
+  </nav>
+  <!-- END OF NAVBAR -->
+
+  <br>
+
+
+  <!-- CONTENT -->
   {% block content %}{% endblock %}
-  <!-- 
+  <!-- END OF CONTENT -->
+
+  <!-- FOOTER -->
+  <hr>
+  <footer class="row">
+    <div class="columns text-center">
+      <p>Copyright <i class="fa fa-copyright"></i> <a href="http://langgar.co">langgar.co</a>.</p>
+    </div>
+  </footer>
+  <!-- END OF FOOTER -->
+  
   <script src="{{ url_for('static', filename='js/vendor/fastclick.js') }}"></script>
-   -->
+  
   <script src="{{ url_for('static', filename='js/foundation.min.js') }}"></script>
 
   <script src="{{ url_for('static', filename='js/angular.min.js') }}"></script>
