--- a/templates/analyze.html
+++ b/templates/analyze.html
@@ -207,7 +207,7 @@ function drawCurves() {
     </div>
     <!-- END OF TWEETS -->
   </div>
-  <a class="close-reveal-modal" aria-label="Close">&#215;</a>
+  <a class="close-reveal-modal" aria-label="Close"><i class="fa fa-times-circle"></i></a>
 </div>
 
   {% endraw %}
