--- a/templates/streamings.html
+++ b/templates/streamings.html
@@ -24,10 +24,10 @@
   <div class="row">
     <div class="small-block-grid-1 large-block-grid-3">
 
-      <li ng-style="info.status=='inactive' && {'opacity': 0.6}" ng-repeat="info in summary | filter:keyword" class="slide">
+      <li ng-class="info.status" ng-repeat="info in summary | filter:keyword" class="slide">
         <ul class="pricing-table">
           {% raw %}
-          <a ng-href="/analyze/{{ info.keyword | encodeURIComponent }}">
+          <a ng-href="/analyze/{{ info.keyword }}">
             <li class="title keyword" ng-bind-html="info.keyword"></li>
           </a>
           <li class="price"><i ng-show="info.processing" class="fa fa-spinner fa-spin fa-spin"></i><span ng-hide="info.processing" ng-bind-html="info.count + ' results'"></span></li>
