--- a/templates/classified.html
+++ b/templates/classified.html
@@ -17,7 +17,7 @@
       </div>
       <!-- JUST SOME CLASSIFIED TWEETS -->
       <div class="row" ng-repeat="tweet in tweets">
-        <div class="columns hide-for-small-only medium-1 th">
+        <div class="columns hide-for-small-only medium-1 th radius">
           <img ng-src="{{ tweet.user.profile_image_url }}">
         </div>
         <div class="columns small-9 medium-8">
