--- a/templates/learn.html
+++ b/templates/learn.html
@@ -15,7 +15,7 @@
       </div>
       <!-- JUST SOME RANDOM TWEETS -->
       <div class="row" ng-repeat="tweet in randomtweets">
-        <div class="columns hide-for-small-only medium-1 th">
+        <div class="columns hide-for-small-only medium-1 th radius">
           <img ng-src="{{ tweet.user.profile_image_url }}">
         </div>
         <div class="columns small-9 medium-8">
