--- a/templates/streamings.html
+++ b/templates/streamings.html
@@ -24,7 +24,7 @@
   <div class="row">
     <div class="small-block-grid-1 large-block-grid-3">
 
-      <li ng-class="info.status" ng-repeat="info in summary | filter:keyword" class="slide">
+      <li ng-class="info.status" ng-repeat="info in summary | filter:keyword">
         <ul class="pricing-table">
           {% raw %}
           <a ng-href="/analyze/{{ info.keyword }}">
