Changes to be committed: 	modified:   templates/analyze.html 	modified:   templates/base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -70,7 +70,7 @@
   <hr>
   <footer class="row">
     <div class="columns text-center">
-      <p>Copyright <i class="fa fa-copyright"></i> <a href="http://langgar.co">langgar.co</a>.</p>
+      <p>copyright <i class="fa fa-copyright"></i> <a href="http://langgar.co">langgar.co</a></p>
     </div>
   </footer>
   <!-- END OF FOOTER -->
