--- a/templates/analyze.html
+++ b/templates/analyze.html
@@ -177,7 +177,7 @@ function drawCurves() {
 
   <div class="row">
     <div class="small-12 text-center">
-      <a ng-href="/download/all/{{keyword}}/all-tweets-{{keyword}}.csv" class="button radius">Download All Tweets</a>
+      <a ng-href="/download/all/{{keyword}}/all-tweets-{{keyword}}.csv" class="button small">Download All Tweets</a>
     </div>
   </div>
 
