--- a/templates/analyze.html
+++ b/templates/analyze.html
@@ -187,7 +187,7 @@ function drawCurves() {
     <div class="row">
       <div class="column small-11 medium-11">      
         <div class="alert-box info radius">
-          <span ng-bind-html="modaltitle"></span>
+          <span>Tweets</span>
           <i ng-hide="hastweets" class="fa fa-lg fa-cog fa-spin"></i>
           <a class="label secondary radius right" ng-href="{{ downloadlink }}" download>
             <i ng-show="hastweets" class="fa fa-lg fa-cloud-download"></i>
